import {
  Body,
  Controller,
  Get,
  Post,
  ValidationPipe,
} from '@nestjs/common';
import {
  ApiBody,
  ApiCreatedResponse,
  ApiOkResponse,
  ApiOperation,
  ApiTags,
} from '@nestjs/swagger';
import { CurriculumNextDto } from './dto/curriculum-next.dto';
import { LessonCompletedWebhookDto } from './dto/lesson-completed-webhook.dto';
import { NextItemRequestDto } from './dto/next-item-request.dto'; // Importa DTO da primeira vers√£o
import { SpanishCardsDto } from './dto/spanish-cards.dto'; // Importa DTO da segunda vers√£o
// O LearningService n√£o √© mais injetado, pois sua l√≥gica foi movida ou substitu√≠da
// import { LearningService } from './learning.service';

@ApiTags('Learning')
@Controller('learning')
export class LearningController {
  // O construtor foi removido, pois LearningService n√£o √© mais usado aqui
  // constructor(private readonly learningService: LearningService) {}

  // üëâ Endpoint acess√°vel pelo navegador (GET)
  @Get('status')
  @ApiOperation({ summary: 'Health-check do gateway' })
  @ApiOkResponse({
    description: 'Retorna status b√°sico do gateway',
    schema: {
      example: {
        ok: true,
        message: 'API Gateway est√° rodando üëå',
        timestamp: '2024-06-30T12:34:56.000Z',
      },
    },
  })
  getStatus() {
    return {
      ok: true,
      message: 'API Gateway est√° rodando üëå',
      timestamp: new Date().toISOString(),
    };
  }

  // Endpoint da primeira vers√£o para listar m√≥dulos
  @Get('modules')
  listModules() {
    // A l√≥gica original do LearningService.getModules() precisa ser reimplementada ou chamada via gRPC
    // Exemplo (stub):
    return [
      {
        id: 'basico-1',
        title: 'Sauda√ß√µes e Apresenta√ß√µes',
        prerequisites: [],
        objectives: ['Cumprimentar', 'Se apresentar'],
        completionCriteria: { minAccuracy: 0.8, minExercises: 8, minVocabulary: 6 },
      },
      {
        id: 'basico-2',
        title: 'Rotina e N√∫meros',
        prerequisites: ['basico-1'],
        objectives: ['Descrever rotina', 'Falar de hor√°rios'],
        completionCriteria: { minAccuracy: 0.8, minExercises: 10, minVocabulary: 7 },
      },
      // ... outros m√≥dulos
    ];
  }

  // Endpoint da primeira vers√£o para obter o pr√≥ximo item
  @Post('next-item')
  getNextItem(
    @Body(
      new ValidationPipe({
        whitelist: true,
        transform: true,
        forbidNonWhitelisted: true,
      }),
    )
    payload: NextItemRequestDto,
  ) {
    // A l√≥gica original do LearningService.getNextItem() precisa ser reimplementada ou chamada via gRPC
    // Exemplo (stub) - Esta l√≥gica deve ser movida para o microsservi√ßo adequado e chamada via gRPC
    const { studentId, completedVocabulary, accuracy, exercisesCompleted } = payload;
    // Simula decis√£o baseada no payload
    const nextVocabularyItem = `vocab-item-${Date.now()}`; // L√≥gica real em outro servi√ßo
    const progress = {
      currentAccuracy: accuracy,
      exercisesCompleted,
      vocabularyMastered: completedVocabulary.length,
      nextSuggestedModule: 'basico-2', // L√≥gica real em outro servi√ßo
    };

    return {
      nextItem: nextVocabularyItem,
      progress,
    };
  }

  // üëâ Endpoint usado pelo webhook (POST) - Da segunda vers√£o
  @Post('lesson-completed')
  @ApiOperation({
    summary: 'Webhook de conclus√£o de li√ß√£o',
    description:
      'Recebe eventos de li√ß√µes conclu√≠das e repassa ao orquestrador (stub).',
  })
  @ApiBody({
    type: LessonCompletedWebhookDto,
    examples: {
      default: {
        summary: 'Evento de conclus√£o',
        value: {
          studentId: 'student-123',
          lessonId: 'lesson-presente-indicativo',
          score: 0.92,
          timestamp: '2024-06-30T12:00:00.000Z',
          metadata: { source: 'mobile-app', durationSeconds: 600 },
        },
      },
    },
  })
  @ApiCreatedResponse({
    description: 'Confirma√ß√£o de recebimento do webhook',
    schema: {
      example: {
        success: true,
        message: 'Lesson completion recebida e processada (stub).',
      },
    },
  })
  async handleLessonCompletedWebhook(
    @Body(new ValidationPipe({ transform: true }))
    payload: LessonCompletedWebhookDto,
  ): Promise<{ message: string; processedAt: string }> {
    // Aqui, o controlador deve chamar o microsservi√ßo student-profiler via gRPC
    // Exemplo (stub):
    console.log('Recebido webhook:', payload);
    // clientGrpcStudentProfiler.recalculateMetrics(payload); // Chamada real via gRPC

    return {
      message: 'Lesson completion recebida e processada (stub).',
      processedAt: new Date().toISOString(),
    };
  }

  // Endpoint da segunda vers√£o para obter o pr√≥ximo conte√∫do do curr√≠culo
  @Post('curriculum/next')
  async getNextCurriculumStep(
    @Body(new ValidationPipe({ transform: true }))
    payload: CurriculumNextDto,
  ): Promise<{ nextConceptId: string; rationale: string }> {
    // A l√≥gica real deve estar no microsservi√ßo content-brain e ser chamada via gRPC
    // Exemplo (stub):
    const nextConceptId = payload.currentConceptId
      ? `${payload.currentConceptId}-next`
      : 'concept-0001';

    return {
      nextConceptId,
      rationale: 'Recomenda√ß√£o baseada em progresso recente (stub).',
    };
  }

  // Endpoint da segunda vers√£o para obter flashcards de espanhol
  @Post('spanish/cards')
  async getSpanishCards(
    @Body(new ValidationPipe({ transform: true }))
    payload: SpanishCardsDto,
  ): Promise<{ conceptId: string; cards: Array<{ front: string; back: string }> }> {
    // A l√≥gica real deve estar no microsservi√ßo content-brain e ser chamada via gRPC
    // Exemplo (stub):
    const limit = payload.limit ?? 10;

    const cards = Array.from({ length: limit }).map((_, index) => ({
      front: `Carta ${index + 1} para ${payload.conceptId}`,
      back: `Tradu√ß√£o/explica√ß√£o ${index + 1}`,
    }));

    return {
      conceptId: payload.conceptId,
      cards,
    };
  }
}